feat(authz): compute RBAC/ABAC in the backend, not in Keycloak
Keycloak was the de facto authorization source: the JWT converter mapped
realm_access.roles straight to granted authorities, and no endpoint was
protected at all -- SecurityConfig had /api/** on permitAll and never
registered oauth2ResourceServer, so tokens were never even validated.

Authorization is now computed entirely in Spring Boot from platform-owned
tables. Keycloak proves identity and nothing else.

Engine (deny-by-default, two stages):
- RBAC: role_permissions matrix must grant (role, resourceType, action)
- ABAC: abac_policies rows evaluated in priority order; matching DENY wins
Both tables are seeded in V5 and editable via /api/v1/admin/**. Rules cover
own-team ownership, prod-requires-TECH_LEAD, tier-1 ADMIN gating, corporate
IP for DELETE, and the 50%/100% canary rollout ceilings.

Identity: JwtAuthenticationConverter now reconciles the verified token
against the users table and binds the JWT subject. The stored role is
authoritative; a divergent realm_access claim is recorded as drift and
ignored. Deactivated users are refused despite a valid token.

Enforcement: all 40 endpoints across 11 controllers carry @PreAuthorize via
a custom PermissionEvaluator (only /api/health stays public). Every denial
is written to AuditLogEntry; 401/403 render as RFC 7807.

Removed OpaPolicyService (reported a fake OPA version, never contacted OPA)
and AbacPolicyEngine (its only caller accepted the caller's own role as a
query parameter). Replaced by ADMIN-only /admin/policies/simulate, which
resolves the subject by id and reads resource attributes from the database.

Also fixed:
- V3 seeded DEVOPS_ENGINEER/SECURITY_LEAD, absent from the Role enum, which
  threw on every read of those users
- AccessDeniedException was caught by the catch-all handler and rendered as
  500 instead of 403
- Docker issuer mismatch: tokens are issued to a browser at localhost:8180
  but the backend validated against keycloak:8180